# rt-mouse

./: LICENSE  README.md
headers/: mouseio.h  mousevar.h
js/: README.md  package-lock.json  server.js
js/public/: index.html
pcb/: pico-rt-mouse.kicad_pcb  pico-rt-mouse.kicad_prl  pico-rt-mouse.kicad_pro  pico-rt-mouse.kicad_sch
pico-firmware/: CMakeLists.txt  README.md  pico-rt-mouse.c
pico-rt-mouse/: README.md  pico-rt-mouse.c  pico_sdk_import.cmake
research/headers/: kls.h  mouse.c  mousereg.h  tty_mouse.c
research/js/: README.md  package.json
swift/: Package.resolved  Package.swift  README.md
swift/Sources/MouseEmulator/: main.swift
